# open-icicle

./: .gitignore  LICENSE  README.md
docs/: docusaurus.config.ts  sidebars.ts
docs/docs/api/: overview.md
docs/docs/api/golang-bindings/: ecntt.md  msm-pre-computation.md  multi-gpu.md
docs/docs/start/integration-&-support/: colab-instructions.md  contributor-guide.md  integrations.md
docs/docs/start/intro/: start.md
docs/docs/start/programmers_guide/: build_from_source.md  go.md  rust.md
docs/versioned_docs/version-3.9.0/api/: overview.md
docs/versioned_docs/version-3.9.0/api/cpp/: ntt.md
docs/versioned_docs/version-3.9.0/api/golang-bindings/: golang-bindings.md  msm.md  ntt.md  vec-ops.md
docs/versioned_docs/version-3.9.0/api/rust-bindings/: multi-gpu.md  rust-bindings.md
docs/versioned_docs/version-3.9.0/start/intro/: getting_started.md  start.md
docs/versioned_docs/version-3.9.0/start/programmers_guide/: build_from_source.md  cpp.md
docs/versioned_sidebars/: version-3.9.0-sidebars.json
examples/golang/install-and-use-icicle/: README.md  main.go
examples/golang/msm/: README.md  main.go  run.sh
examples/golang/ntt/: README.md  main.go
examples/golang/polynomials/: run.sh
examples/rust/: Cargo.toml
examples/rust/arkworks-icicle-conversions/: Cargo.toml
examples/rust/install-and-use-icicle/: Cargo.toml
examples/rust/msm/: Cargo.toml
examples/rust/msm/src/: main.rs
examples/rust/ntt/: Cargo.toml
examples/rust/ntt/src/: main.rs
examples/rust/polynomials/: Cargo.toml
examples/rust/polynomials/src/: main.rs
icicle/: CMakeLists.txt  build_from_source.md
icicle/backend/cpu/: CMakeLists.txt
icicle/backend/cpu/src/field/: cpu_vec_ops.cpp
icicle/backend/cuda/: CMakeLists.txt
icicle/backend/cuda/include/: cuda_mont.cuh  cuda_vec_ops.cuh  version.h
icicle/backend/cuda/include/ntt/: ntt.cuh
icicle/backend/cuda/src/: cuda_device_api.cu
icicle/backend/cuda/src/field/: cuda_matrix_ops.cu  cuda_mont.cu  cuda_vec_ops.cu
icicle/backend/cuda/src/msm/: cuda_msm.cuh  cuda_msm_g2.cu
icicle/backend/cuda/src/msm/tests/: huge_msm_test.cu  msm_test.cu
icicle/backend/cuda/src/ntt/: cuda_ecntt.cu  cuda_ntt.cu  mixed_radix_ntt.cu
icicle/backend/cuda/src/ntt/tests/: verification.cu
icicle/backend/cuda/src/polynomials/: cuda_polynomial_backend.cu
icicle/backend/metal/: .gitignore  CMakeLists.txt  README.md
icicle/backend/metal/cmake/: shaders.cmake
icicle/backend/metal/include/: metal_device_api.h  metal_lib_config.h  metal_library_loader.h  metal_msm.h  mont_conversion.h  version.h
icicle/backend/metal/include/Metal/: Metal.h
icicle/backend/metal/scripts/: format_all.sh
icicle/backend/metal/shaders/curves/bls12_381/: montgomery.metal  msm.metal
icicle/backend/metal/shaders/curves/bn254/: montgomery.metal  msm.metal
icicle/backend/metal/shaders/fields/bls12_381/: ntt.metal  vec_ops.metal
icicle/backend/metal/shaders/fields/bn254/: ntt.metal  vec_ops.metal
icicle/backend/metal/shaders/include/: msm.metal.h  ntt.metal.h  vec_ops.metal.h
icicle/backend/metal/shaders/include/curve/: affine.metal.h  projective.metal.h
icicle/backend/metal/shaders/include/curve/params/: bls12_381.metal.h  bn254.metal.h
icicle/backend/metal/shaders/include/field/: arithmetic.metal.h  complex_extension.metal.h  field.metal.h  karatsuba.metal.h  quartic_extension.metal.h
icicle/backend/metal/shaders/include/field/params/: bls12_381.metal.h  bn254.metal.h
icicle/backend/metal/src/: metal_api.cpp  metal_device_api.cpp
icicle/backend/metal/src/curve/: metal_ecntt.cpp  metal_mont_conversion.cpp
icicle/backend/metal/src/field/: metal_ntt.cpp  metal_vec_ops.cpp
icicle/backend/metal/src/msm/: metal_msm.cpp  metal_msm_backend.h  metal_msm_g2.cpp
icicle/backend/metal/src/polynomials/: metal_polynomial_backend.cpp
icicle/backend/metal/tests/: CMakeLists.txt  test_base.cpp
icicle/backend/metal/tests/ec/: test_kernels.metal
icicle/cmake/: features.cmake  field.cmake  target_editor.cmake
icicle/include/icicle/: errors.h  vec_ops.h
icicle/include/icicle/backend/: vec_ops_backend.h
icicle/include/icicle/fields/: field_config.h  id.h
icicle/include/icicle/pairing/: pairing_config.h
icicle/src/: vec_ops.cpp
icicle/tests/: CMakeLists.txt
wrappers/golang/: README.md
wrappers/golang/internal/: build-libs.go
wrappers/golang/internal/generator/: main.go
wrappers/rust/: Cargo.toml
wrappers/rust/icicle-core/: build.rs
wrappers/rust/icicle-core/src/: lib.rs
wrappers/rust/icicle-curves/icicle-bls12-381/: Cargo.toml  build.rs
wrappers/rust/icicle-curves/icicle-bls12-381/src/: lib.rs
wrappers/rust/icicle-curves/icicle-bn254/: Cargo.toml  build.rs
wrappers/rust/icicle-runtime/: build.rs
