
[workspace]
members = [
    "msm",
    "ntt",
    "polynomials",
    "arkworks-icicle-conversions",
]
exclude = ["install-and-use-icicle"]

[workspace.dependencies]
# Add any shared dependencies here
icicle-runtime = { path = "../../wrappers/rust/icicle-runtime" }
icicle-core = { path = "../../wrappers/rust/icicle-core" }
icicle-bn254 = { path = "../../wrappers/rust/icicle-curves/icicle-bn254" }
icicle-bls12-381 = { path = "../../wrappers/rust/icicle-curves/icicle-bls12-381" }
rand = "0.8"
clap = { version = "<=4.4.12", features = ["derive"] }
