[workspace]
resolver = "2"
members = [
  "icicle-runtime",
  "icicle-core",
  "icicle-curves/icicle-bls12-381",
  "icicle-curves/icicle-bn254",
]
exclude = []

[workspace.package]
version = "3.9.2"
edition = "2021"
authors = ["Ingonyama"]
homepage = "https://www.ingonyama.com"
repository = "https://github.com/ingonyama-zk/icicle"

[workspace.dependencies]
icicle-core = { path = "icicle-core" }
icicle-runtime = { path = "icicle-runtime" }
